ardupilot_ws/logs/my_APMrover/build.make.075.log
[ 20%] Built target velocity_sending_node
[ 40%] Built target rover_WP_nav
[35m[1mScanning dependencies of target rover_P_control[0m
[ 60%] Built target PN_node
[ 70%] [32mBuilding CXX object CMakeFiles/rover_P_control.dir/src/rover_P_control.cpp.o[0m
[35m[1mScanning dependencies of target rover_P_control_1[0m
[ 80%] [32mBuilding CXX object CMakeFiles/rover_P_control_1.dir/src/rover_P_control_1.cpp.o[0m
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:116:5: error: expected unqualified-id before ‘else’
     else
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:125:5: error: expected unqualified-id before ‘while’
     while (ros::ok() && flag == 1)
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:132:5: error: ‘flag’ does not name a type
     flag=1;
     ^
/home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/src/my_APMrover/src/rover_P_control.cpp:133:3: error: expected declaration before ‘}’ token
   }
   ^
make[2]: *** [CMakeFiles/rover_P_control.dir/src/rover_P_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/rover_P_control.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
CMakeFiles/rover_P_control.dir/build.make:62: recipe for target 'CMakeFiles/rover_P_control.dir/src/rover_P_control.cpp.o' failed
CMakeFiles/Makefile2:402: recipe for target 'CMakeFiles/rover_P_control.dir/all' failed
[ 90%] [32m[1mLinking CXX executable /home/scp/iiit-delhi/Ardupilot-using-ROS/ardupilot_ws/devel/.private/my_APMrover/lib/my_APMrover/rover_P_control_1[0m
[ 90%] Built target rover_P_control_1
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
